gcc/testsuite/rust/rustc/ui/bad/bad-const-type.rs
static i: String = 10;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
fn main() { println!("{}", i); }

